# AETHER

./: .gitignore  LICENSE  MANIFEST.in  README.md  bump_version.sh  drone_nav_research.txt  fault_comparison.txt  install.sh  launch_aether.sh  main.py  prompt.txt  pyproject.toml  results.csv  results.json  run_experiments.py
.claude-flow/: CAPABILITIES.md  agents.json  config.yaml
.claude-flow/hive-mind/: state.json
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.github/workflows/: publish.yml  test.yml
.hive-mind/sessions/: hive-mind-prompt-hive-1774416251815.txt
.swarm/: state.json
aether/: __init__.py  __main__.py  app.py
aether/actions/: abstract_actions.py
aether/adapters/: base_adapter.py  drone_adapter.py  rover_adapter.py  universal_adapter.py
aether/agents/: adaptation_agent.py  camera_agent.py  correction_agent.py  execution_agent.py  fault_agent.py  memory_agent.py  movement_agent.py  navigation_agent.py  perception_agent.py  planner_agent.py  power_agent.py  task_manager.py  thermal_agent.py
aether/capabilities/: capability_loader.py
aether/core/: auto_installer.py  auto_updater.py  banner.py  calibration.py  executor.py  feedback.py  goal_parser.py  llm_planner.py  mapper.py  memory.py  message_bus.py  metrics.py  navigation_engine.py  planner.py  task_scheduler.py  tool_builder.py  tool_discovery.py  tool_registry.py  visualizer.py
aether/faults/: fault_detector.py  fault_injector.py
aether/logs/: hardware_calls.json
aether/simulation/: environment.py  real_perception.py  scenarios.py
config/: drone_v1.json  rover_v1.json
configs/: calibrated_camera_only_20260331_121709.json  calibrated_camera_only_20260401_094544.json  drone_v1.json  rover_v1.json
context/: aether_definitions.txt
dashboard/: app.py
logs/: BENCHMARK_1000runs_v1.csv  BENCHMARK_1000runs_v1.json  REALWORLD_BENCHMARK_6023steps.json  scheduled_tasks.json
paper/: realworld_results.txt
tests/: generalization_test.py  test_auto_updater.py  test_calibration.py  test_calibration_unit.py  test_chaos.py  test_mapper.py  test_navigation_engine.py  test_persistent_memory.py  test_security.py  test_task_scheduler.py  test_tool_builder.py  test_tool_discovery.py  test_yolo_integration.py
