[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-robotics"
version = "3.2.1"
description = "Autonomous multi-agent robotics system with DRL-First Hybrid FDIR"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Chahel Paatur"}]
keywords = ["robotics", "autonomous", "FDIR", "fault-detection", "raspberry-pi", "drone", "AI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
    "Intended Audience :: Science/Research"
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
full = [
    "anthropic>=0.50.0",
    "flask>=3.0.0",
    "opencv-python-headless>=4.8.0",
    "matplotlib>=3.7.0",
]
pi = ["picamera2", "RPi.GPIO", "gpiozero", "smbus2"]
drone = ["pymavlink", "pyserial"]
ml = ["ultralytics", "scipy", "scikit-learn"]

[project.scripts]
aether = "aether.__main__:main"

[project.urls]
Homepage = "https://github.com/ChahelPaatur/AETHER"
Repository = "https://github.com/ChahelPaatur/AETHER"
Issues = "https://github.com/ChahelPaatur/AETHER/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aether*"]

[tool.setuptools.package-data]
aether = ["**/*.py"]
"*" = [
    "configs/*.json",
    "context/*.txt",
    "weights/*.npy",
]
